--- a/package.json
+++ b/package.json
@@ -26,10 +26,14 @@
     },
     "homepage": "https://github.com/vladimir-xaro/svelte-i18n#readme",
     "dependencies": {
+        "deepmerge": "^4.3.1",
+        "isobject": "^4.0.0",
+        "merge": "^2.1.1",
         "svelte": "^4.0.5"
     },
     "devDependencies": {
         "@tsconfig/svelte": "^5.0.2",
+        "await-sleep": "^0.0.1",
         "esbuild": "^0.19.3",
         "esbuild-sass-plugin": "^2.15.0",
         "esbuild-svelte": "^0.8.0",
