--- a/package.json
+++ b/package.json
@@ -45,6 +45,12 @@
     "release-it": {
         "github": {
             "release": true
+        },
+        "npm": {
+            "publish": true
         }
+    },
+    "publishConfig": {
+        "access": "public"
     }
 }
